Fixed issues caused by merging using old codebase.  Fixed an alignment issue.

--- a/Project1/stylesheet.css
+++ b/Project1/stylesheet.css
@@ -2,27 +2,10 @@ html, body{
     font-family: "Roboto";
 }
 
-/*Generic Shortcuts to commonly used options*/
-.floatLeft{ /*Generic shortcut to float items left*/
-    float: left;
-}
-
-.floatRight{ /*Generic shortcut to float items right*/
-    float: right;
-}
-
-.italic{ /*Generic shortcut to italicize text*/
+/*Generic classes for commonly used options*/
+.italic{
     font-style: italic;
 }
-
-.modernBlue{ /*Quick select of Modern Developer blue*/
-    color: #74A1E9;
-}
-
-.modernGray{ /*Quick select of Modern Developer gray*/
-    color: #EFF1F2;
-}
-/*END Generic Quick Options*/
 
 input { /*Add pencil to inputs, remove border*/
     background-image: url(images/pencil.png);
@@ -32,7 +15,7 @@ input { /*Add pencil to inputs, remove border*/
 }
 
 .greyBack{ /*Change Background to gray*/
-    background-color: #EFF1F2;
+    background-color: #EFF1F2;;
 }
 
 /*Selection Box Options*/
@@ -52,13 +35,29 @@ option{
 }
 /*END Select Options*/
 
+.floatLeft{ /*Generic shortcut to float items left*/
+    float: left;
+}
+
+.floatRight{ /*Generic shortcut to float items right*/
+    float: right;
+}
+
+.modernBlue{ /*Quick select of Modern Developer blue*/
+    color: #74A1E9;
+}
+
+.modernGray{ /*Quick select of Modern Developer gray*/
+    color: #EFF1F2;
+}
+
 .line{ /*Gray line used to seperate the divs.  I use a straight, gray line
     and modify the height.  See /images/line.png*/
     display: block;
     position: relative;
     height: 2px;
     width: 100%;
-    margin-bottom: 3vh;
+    margin-bottom: 5vh;
 }
 
 #topline{
@@ -89,11 +88,17 @@ option{
 }
 
 /*Options for Modifiable Room Name Section*/
-#roomName{ /* Full Div options*/
+#roomName{ /*Div options*/
     display: block;
     width: 80vw;
     margin: 0 auto;
     margin-bottom: 3vh;
+}
+
+#roomName .blockDetails{
+    color: black;
+    font-size: 19px;
+    font-weight: 300;
 }
 
 #roomName input{
@@ -101,12 +106,6 @@ option{
     font-size: 25px;
     width: 153px;
     height: auto;
-}
-
-#roomName .blockDetails{
-    color: black;
-    font-size: 19px;
-    font-weight: 300;
 }
 /*END Modifiable Room Name Section Options*/
 
@@ -117,6 +116,12 @@ option{
 
 .rcTitles{
     font-size: 22px;
+    width: 84px;
+}
+
+.addNew{
+    width: calc(100% - 84px);
+    text-align: right;
 }
 
 #addRoles{ /*Define width of Roles div*/
@@ -132,7 +137,7 @@ option{
     height: 150px;
 }
 
-#defineRoles span{
+#defineRoles span{ /*Names of people*/
     width: 50%;
 }
 
@@ -154,6 +159,7 @@ option{
     width: 100%;
     height: 150px;
     flex-flow: row wrap;
+    justify-content: flex-start;
     align-items: flex-end;
 }
 
